--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
-  },
-  "dependencies": {
-    "@electron/remote": "^2.1.2"
+    "electron": "^39.0.0",
+    "electron-builder": "^26.0.12"
   },
   "build": {
     "appId": "ttt-timer-app-id-v1",
@@ -57,8 +54,8 @@
       "main.js",
       "preload.js",
       "index.html",
-      "package.json",
-      "node_modules/@electron/remote/**/*"
+      "index-debug.html",
+      "package.json"
     ]
   }
 }
